Updating favicon key on config.toml

--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ title = "Hi! This is Júlio Ballot"
 author = "Júlio Ballot"
 description = "Call me Ballot"
 profilePicture = "images/profile.jpg"
-
+favicon = "favicons/"
 
 ## Math settings
 [params.math]
